--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>ALBERTO</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/b6c54910cc.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header id="header"></header>
+    <header id="header">
+        <nav class="nav-main">
+            <input type="checkbox" name="" id="check">
+            <label for="check" id="check-icon"><i class="fa-solid fa-bars"></i></label>
+            <label for="check" id="check-icon2"><i class="fa-solid fa-xmark"></i></label>
+            <div class="main-logo">ALBERTO</div>
+            <ul class="main-menu">
+                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
+            </ul>
+        </nav>
+        <div class="main-banner">a</div>
+    </header>
     <main id="main"></main>
     <footer id="footer"></footer>
 </body>
