--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="checkbox" name="" id="check">
             <label for="check" id="check-icon"><i class="fa-solid fa-bars"></i></label>
             <label for="check" id="check-icon2"><i class="fa-solid fa-xmark"></i></label>
-            <div class="main-logo">ALBERTO</div>
+            <div class="main-logo">ALBERTOP</div>
             <ul class="main-menu">
                 <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
                 <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
