--- a/index.html
+++ b/index.html
@@ -10,20 +10,19 @@
 </head>
 <body>
     <header id="header">
-        <nav class="nav-main">
-            <input type="checkbox" name="" id="check">
-            <label for="check" id="check-icon"><i class="fa-solid fa-bars"></i></label>
-            <label for="check" id="check-icon2"><i class="fa-solid fa-xmark"></i></label>
-            <div class="main-logo">ALBERTOP</div>
+        <nav class="main-nav">
+            <input type="checkbox" name="" id="main-check">
+            <label for="main-check" id="main-check-open"><i class="fa-solid fa-bars"></i></label>
+            <label for="main-check" id="main-check-close"><i class="fa-solid fa-xmark"></i></label>
+            <div class="main-logo">ALBERTO</div>
             <ul class="main-menu">
-                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-                <li><a href="#"><i class="fa-solid fa-house"></i>Inicio</a></li>
-            </ul>
+                <li><a href="#"><i class="fa-solid fa-tree"></i>Inicio</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Productos</a></li>
+                <li><a href="#"><i class="fa-solid fa-xmark"></i>Descargas</a></li>
+                <li><a href="#"><i class="fa-solid fa-house"></i>Contactos</a></li>
+                <li><a href="#"><i class="fa-solid fa-clock"></i>Nosotros</a></li>
+            </ul>   
         </nav>
-        <div class="main-banner">a</div>
     </header>
     <main id="main"></main>
     <footer id="footer"></footer>
