--- a/index.html
+++ b/index.html
@@ -25,9 +25,13 @@
         </nav>
     </header>
     <main id="main">
+        <section class="banner">
+            <h1 class="banner__main-title">SERVICIO TECNICO ESPECIALIZADO</h1>
+            <p>Realizamos repracion de Computadpras, laprop e imoresoras</p>
+        </section>
         <section class="gallery">
             <span class="gallery__main-title">GALERÍA DE FOTOS</span>
-            <p>Disfrutamos nuentro trabajp y conpratirlo contigo</p>
+            <p>Disfrutamos nuestro trabajo y compartirlo contigo</p>
             <div class="gallery__main-container">
                 <img src="img/image1.jpg" alt="">
                 <img src="img/image2.jpg" alt="">
