--- a/index.html
+++ b/index.html
@@ -2,54 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/b6c54910cc.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header id="header">
-        <nav class="header__main-nav">
-            <span class="header__main-logo">ALBERTO OS</span>
-            <input type="checkbox" name="" id="header__main-check">
-            <label for="header__main-check" id="header__main-check--open"><i class="fa-solid fa-bars"></i></label>
-            <label for="header__main-check" id="header__main-check--close"><i class="fa-solid fa-xmark"></i></label>
-            <ul class="header__main-menu">
+    <header>
+        <nav>
+            <div class="logo-menu">ALBERTO</div>
+            <ul class="main-menu">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Descargas</a></li>
                 <li><a href="#">Productos</a></li>
-                <li><a href="#">Galería</a></li>
+                <li><a href="#">Descargas</a></li>
                 <li><a href="#">Contactos</a></li>
             </ul>
+            <input class="button-menu" type="button" value="Contacto">
         </nav>
-    </header>
-    <main id="main">
         <section class="banner">
-            <h1 class="banner__main-title">SERVICIO TECNICO ESPECIALIZADO</h1>
-            <p>Realizamos repracion de Computadpras, laprop e imoresoras</p>
+            <h1>SERVICIO TÉCNICO<br>De Impresoras, Pcs y Laptops</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente est sunt quisquam architecto facilis alias, modi vel veritatis iusto unde quidem dolor nisi obcaecati numquam provident sit blanditiis facere.</p>
+            <input class="button-menu" type="button" value="SEND">
+            <input class="button-menu" type="button" value="MAS">
         </section>
-        <section class="gallery">
-            <span class="gallery__main-title">GALERÍA DE FOTOS</span>
-            <p>Disfrutamos nuestro trabajo y compartirlo contigo</p>
-            <div class="gallery__main-container">
-                <img src="img/image1.jpg" alt="">
-                <img src="img/image2.jpg" alt="">
-                <img src="img/image3.jpg" alt="">
-                <img src="img/image4.jpg" alt="">
-            </div>
-        </section>
+    </header>
+    <main>
+        tfh
     </main>
-    <footer id="footer">
-        <nav class="footer__main-nav">
-            <ul class="footer__main-menu">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Descargas</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Galería</a></li>
-                <li><a href="#">Contactos</a></li>
-            </ul>
-        </nav>
-    </footer>
 </body>
 </html>
