--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input class="button-menu" type="button" value="Contacto">
         </nav>
         <section class="banner">
-            <h1>SERVICIO TÉCNICO<br>De Impresoras, Pcs y Laptops</h1>
+            <h1>SERVICIO TÉCNICO De Impresoras, Pcs y Laptops</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente est sunt quisquam architecto facilis alias, modi vel veritatis iusto unde quidem dolor nisi obcaecati numquam provident sit blanditiis facere.</p>
             <input class="button-menu" type="button" value="SEND">
             <input class="button-menu" type="button" value="MAS">
