--- a/index.html
+++ b/index.html
@@ -25,5 +25,19 @@
             <input class="button-menu" type="button" value="MAS">
         </section>
     </header>
+    <main>
+        <ul>
+            <li>fhgf</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+            <li>MENU DE INTERACCION</li>
+        </ul>
+    </main>
 </body>
 </html>
