--- a/index.html
+++ b/index.html
@@ -9,27 +9,14 @@
 <body>
     <header>
         <nav>
-            <div class="logo-menu">ALBERTO</div>
             <ul class="main-menu">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Descargas</a></li>
-                <li><a href="#">Contactos</a></li>
-            </ul>
-            <input class="button-menu" type="button" value="Contacto">
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
+            </ul> 
         </nav>
-        <section class="banner">
-            <h1>SERVICIO TÉCNICO De Impresoras, Pcs y Laptops</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt sapiente est sunt quisquam architecto facilis alias, modi vel veritatis iusto unde quidem dolor nisi obcaecati numquam provident sit blanditiis facere.</p>
-            <input class="button-menu" type="button" value="SEND">
-            <input class="button-menu" type="button" value="MAS">
-        </section>
     </header>
-    <main>
-        <ul>
-            <li>fhgf</li>
-            <li>MENU DE INTERACCION</li>
-        </ul>
-    </main>
 </body>
 </html>
