--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Descargas</a></li>
                 <li><a href="#">Contactos</a></li>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Soporte</a></li>
                 <li><a href="#">Inicio</a></li>
             </ul> 
         </nav>
