--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href="#">Descargas</a></li>
                 <li><a href="#">Contactos</a></li>
                 <li><a href="#">Soporte</a></li>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Ubicacion</a></li>
             </ul> 
         </nav>
     </header>
