--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <nav>
             <ul class="main-menu">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Descargas</a></li>
-                <li><a href="#">Contactos</a></li>
-                <li><a href="#">Soporte</a></li>
-                <li><a href="#">Ubicacion</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Inicio</a></li>
             </ul> 
         </nav>
     </header>
