--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul class="main-menu">
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Descargas</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Inicio</a></li>
