--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="main-menu">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Soporte</a></li>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Inicio</a></li>
             </ul> 
