--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google" content="notranslate" />
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,7 +15,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Soporte</a></li>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Contactos</a></li>
             </ul> 
         </nav>
     </header>
