--- a/index.html
+++ b/index.html
@@ -7,33 +7,8 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
-        <nav class="header-menu">
-            <div class="logo">
-                <span>Albert OS</span>
-            </div>
-            <div class="menu">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Descargas</a></li>
-                <li><a href="#">Contactos</a></li>
-            </div>
-            <div class="button">
-                <a href="#">Idioma</a>
-                <button>Descarga</button>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="main-banner">
-            <div class="banner">
-                <h1>Servicio Tecnico de Impresoras Pc y Laptops</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium in, mollitia ullam, magnam similique iste obcaecati alias consectetur eaque dolore eligendi maxime esse ad, cum vitae perferendis delectus beatae nostrum?</p>
-                <button>Descarga</button>
-            </div>
-            
-            
-        </section>
-    </main>
+    <header id="header"></header>
+    <main id="main"></main>
+    <footer id="footer"></footer>
 </body>
 </html>
