--- a/index.html
+++ b/index.html
@@ -5,10 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header id="header"></header>
-    <main id="main"></main>
-    <footer id="footer"></footer>
+    <header id="header">
+        <nav class="container-menu">
+            <div class="logo-menu">
+                <span>Albert OS</span>
+            </div>
+            <ul class="main-menu">
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="productos.html">Productos</a></li>
+                <li><a href="#">Descargas</a></li>
+                <li><a href="#">Servicios</a></li>
+            </ul>
+            <div class="icons-menu">
+                <i class="fa-solid fa-house"></i>
+                <i class="fa-solid fa-house"></i>
+            </div>
+        </nav>
+    </header>
+    <main id="main">
+
+        <section class="container-banner">
+            <div class="banner">
+                <h1 class="banner-title">Servicio Tecnico de Computadaroas, impresoras y laptops</h1>
+                <p class="banner-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit saepe officiis blanditiis porro, voluptatem autem aliquid et nulla rerum accusantium similique expedita, magnam quis doloremque, ducimus id explicabo! Neque, ad!</p>
+                <button class="banner-button button">Descargar</button>
+            </div>
+        </section>
+
+        <section class="container-services">
+            <div class="services">
+                <div class="services-box--1">SOBRE LA EMPRESA</div>
+                <div class="services-box">
+                    <div class="services-box-item">
+                        <span>IMPRESORAS</span>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                    <div class="services-box-item">
+                        <span>IMPRESORAS</span>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                    <div class="services-box-item">
+                        <span>IMPRESORAS</span>
+                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
+                        <i class="fa-solid fa-house"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer id="footer">
+
+        <div class="footer-container">
+            Todos los derechos reservados, los izquierdos tambien :v
+        </div>
+
+    </footer>
+
+    <script src="https://kit.fontawesome.com/b6c54910cc.js" crossorigin="anonymous"></script>
+
 </body>
 </html>
