--- a/index.html
+++ b/index.html
@@ -9,62 +9,67 @@
 </head>
 <body>
     <header id="header">
-        <nav class="container-menu">
-            <div class="logo-menu">
-                <span>Albert OS</span>
-            </div>
-            <ul class="main-menu">
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="#">Descargas</a></li>
-                <li><a href="#">Servicios</a></li>
-            </ul>
-            <div class="icons-menu">
-                <i class="fa-solid fa-house"></i>
-                <i class="fa-solid fa-house"></i>
-            </div>
-        </nav>
-    </header>
-    <main id="main">
-
-        <section class="container-banner">
-            <div class="banner">
-                <h1 class="banner-title">Servicio Tecnico de Computadaroas, impresoras y laptops</h1>
-                <p class="banner-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit saepe officiis blanditiis porro, voluptatem autem aliquid et nulla rerum accusantium similique expedita, magnam quis doloremque, ducimus id explicabo! Neque, ad!</p>
-                <button class="banner-button button">Descargar</button>
-            </div>
-        </section>
-
-        <section class="container-services">
-            <div class="services">
-                <div class="services-box--1">SOBRE LA EMPRESA</div>
-                <div class="services-box">
-                    <div class="services-box-item">
-                        <span>IMPRESORAS</span>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
-                        <i class="fa-solid fa-house"></i>
-                    </div>
-                    <div class="services-box-item">
-                        <span>IMPRESORAS</span>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
-                        <i class="fa-solid fa-house"></i>
-                    </div>
-                    <div class="services-box-item">
-                        <span>IMPRESORAS</span>
-                        <P>Lorem ipsum dolor sit amet consectetur adipisicing elit.</P>
-                        <i class="fa-solid fa-house"></i>
+        <section class="menu">
+            <nav class="menu__container">
+                <div class="header-menu">
+                    <div class="logo">
+                        <span>ALBERTO</span>
                     </div>
                 </div>
-            </div>
+                <div class="menu_container__icons">
+                    <!-- <i class="fa-solid fa-xmark"></i> -->
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+            </nav>
         </section>
+    </header>
+    <main id="main">
+        <main class="main-container">
+            <section class="banner">
+                <div class="banner__container">
+                    <h1 class="banner__title">Servicio Técnico<br>Professional</h1>
+                    <p class="banner__text">Para impresoras, computadoras y laptops</p>
+                    <div class="banner__buttons">
+                        <a href="#" class="banner__buttons__item"><i class="fa-brands fa-whatsapp"></i><span>CONSULTAR<br>GRATIS</span></a href="#">
+                        <a href="#" class="banner__buttons__item"><i class="fa-brands fa-youtube"></i><span>VER<br>TURORIALES</span></a href="#">
+                    </div>
+                </div>
+            </section>
 
+            <section class="services">
+                <div class="services__container">
+                    <h2 class="services__title">Nuestros Servicios</h2>
+                    <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt inventore repellat, sapiente placeat nostrum quod rem perspiciatis optio laboriosam ratione illo iste dolore, culpa quam sunt. Repellat dolor temporibus amet?</p>
+                    <button class="services__button button__classic">CONOCE MAS</button>
+                    <div class="services__box">
+                        <div class="services__box__item">
+                            <i class="fa-brands fa-youtube"></i>
+                            <span>Impresoras</span>
+                            <p>Lorem ipsum dolor sit amet, sunt odio ipsum aspernatur reprehenderit! At voluptate molestiae impedit!</p>
+                        </div>
+                        <div class="services__box__item">
+                            <i class="fa-brands fa-youtube"></i>
+                            <span>Impresoras</span>
+                            <p>Lorem ipsum dolor sit amet, sunt odio ipsum aspernatur reprehenderit! At voluptate molestiae impedit!</p>
+                        </div>
+                        <div class="services__box__item">
+                            <i class="fa-brands fa-youtube"></i>
+                            <span>Impresoras</span>
+                            <p>Lorem ipsum dolor sit amet, sunt odio ipsum aspernatur reprehenderit! At voluptate molestiae impedit!</p>
+                        </div>
+                        <div class="services___box__item"></div>
+                        <div class="services___box__item"></div>
+                        <div class="services___box__item"></div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </main>
+
     <footer id="footer">
-
-        <div class="footer-container">
-            Todos los derechos reservados, los izquierdos tambien :v
-        </div>
-
+        <section class="footer">
+            <div class="footer-container"></div>
+        </section>
     </footer>
 
     <script src="https://kit.fontawesome.com/b6c54910cc.js" crossorigin="anonymous"></script>
