--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <main class="main-container">
             <section class="banner">
                 <div class="banner__container">
-                    <h1 class="banner__title">Servicio Técnico<br>Professional</h1>
+                    <h1 class="banner__title">Servicio Técnico<br>Profesional</h1>
                     <p class="banner__text">Para impresoras, computadoras y laptops</p>
                     <div class="banner__buttons">
                         <a href="#" class="banner__buttons__item"><i class="fa-brands fa-whatsapp"></i><span>CONSULTAR<br>GRATIS</span></a href="#">
@@ -39,23 +39,38 @@
             <section class="services">
                 <div class="services__container">
                     <h2 class="services__title">Nuestros Servicios</h2>
-                    <p class="services__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt inventore repellat, sapiente placeat nostrum quod rem perspiciatis optio laboriosam ratione illo iste dolore, culpa quam sunt. Repellat dolor temporibus amet?</p>
+                    <p class="services__text">Lorem ipsum ratione illo iste dolore, culpa quam sunt. Repellat dolor temporibus amet?</p>
                     <button class="services__button button__classic">CONOCE MAS</button>
                     <div class="services__box">
                         <div class="services__box__item">
-                            <i class="fa-brands fa-youtube"></i>
+                            <img src="img/services-printer.svg" alt="">
                             <span>Impresoras</span>
-                            <p>Lorem ipsum dolor sit amet, sunt odio ipsum aspernatur reprehenderit! At voluptate molestiae impedit!</p>
+                            <ul>
+                                <li>Servicio fortameto de windows</li>
+                                <li>Recuperacion de infiormacion</li>
+                                <li>Instaacion de programas</li>
+                                <li>Reparcion de placa madre</li>
+                            </ul>
                         </div>
                         <div class="services__box__item">
-                            <i class="fa-brands fa-youtube"></i>
-                            <span>Impresoras</span>
-                            <p>Lorem ipsum dolor sit amet, sunt odio ipsum aspernatur reprehenderit! At voluptate molestiae impedit!</p>
+                            <img src="img/services-computer.svg" alt="">
+                            <span>Computadoras</span>
+                            <ul>
+                                <li>Servicio fortameto de windows</li>
+                                <li>Recuperacion de infiormacion</li>
+                                <li>Instaacion de programas</li>
+                                <li>Reparcion de placa madre</li>
+                            </ul>
                         </div>
                         <div class="services__box__item">
-                            <i class="fa-brands fa-youtube"></i>
-                            <span>Impresoras</span>
-                            <p>Lorem ipsum dolor sit amet, sunt odio ipsum aspernatur reprehenderit! At voluptate molestiae impedit!</p>
+                            <img src="img/services-laptop.svg" alt="">
+                            <span>Laptops</span>
+                            <ul>
+                                <li>Servicio fortameto de windows</li>
+                                <li>Recuperacion de infiormacion</li>
+                                <li>Instaacion de programas</li>
+                                <li>Reparcion de placa madre</li>
+                            </ul>
                         </div>
                         <div class="services___box__item"></div>
                         <div class="services___box__item"></div>
